--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bytemuck = "1.22.0"
 gl33 = "0.2.1"
 beryllium = "0.13.3"
+image = "0.25.6"
 
 [dev-dependencies]
 imagine = "0.5.1"
