--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytemuck = "1.22.0"
 gl33 = "0.2.1"
 beryllium = "0.13.3"
 image = "0.25.6"
+glam = "0.30.3"
 
 [dev-dependencies]
 imagine = "0.5.1"
